--- a/scss_4/_type.scss
+++ b/scss_4/_type.scss
@@ -1091,6 +1091,7 @@
                     z-index: 5;
                     padding-top: 1px;
                     cursor: pointer;
+                    background: none;
 
                     &:first-child {
                         padding-left: 2px;
