--- a/scss_4/_myself.scss
+++ b/scss_4/_myself.scss
@@ -138,7 +138,7 @@
     .helpbar {
         width: 1150px;
         height: 45px;
-        background: linear-gradient(to top, #f3f3f3 0%, #ffffff 100%);
+        background: linear-gradient(to top,#ffffff 5%,#ebf0f2 26%,#ffffff 82%);
         border-radius: 3px;
         position: relative;
         z-index: 1;
@@ -153,31 +153,50 @@
             position: absolute;
             width: 6px;
             height: 10px;
-            background: url('../images/arrow_b.png') no-repeat;
+            background: url('../images/arrow_bl.png') no-repeat;
             right: 20px;
             top: 18px;
             transform: rotate(90deg);
         }
 
-        &.open {
+        &:hover {
+            border: solid 1px transparent;
             background: #ffffff;
-            border: solid 1px #356bf7;
+            border-color: #d31c1c;
+
+            p,span {
+                color: #ce1427;
+            }
+        }
+
+        &.open {
+            background: #39547f;
+            border-color: transparent;
+
+            p,span {
+                color: #ffffff;
+            }
 
             &::before {
                 width: 6px;
                 height: 10px;
-                background: url('../images/arrow_b.png') no-repeat;
+                background: url('../images/arrow_w.png') no-repeat;
                 background-size: 100%;
-                transform: rotate(-90deg);
+                transform: rotate(90deg);
             }
         }
 
         //編輯中
         &.edit {
-            background: linear-gradient(to top, #f3f3f3 0%, #ffffff 100%);
+            background: linear-gradient(to top,#ffffff 5%,#ebf0f2 26%,#ffffff 82%);
+            border: solid 1px transparent;
 
             label {
                 display: block;
+            }
+
+            p,span {
+                color: #1b1b1b;
             }
         }
 
@@ -195,14 +214,14 @@
             line-height: 45px;
             padding-left: 15px;
             font-size: 15px;
-            color: #454545;
+            color: #1b1b1b;
         }
 
         span {
             float: right;
             line-height: 45px;
             padding-right: 50px;
-            color: #595959;
+            color: #1b1b1b;
             font-size: 15px;
         }
 
@@ -214,10 +233,9 @@
             margin: 13px 0px 0px 20px;
             position: relative;
             z-index: 1;
-            background: #f5f5f5;
+            background: #fcfcfc;
             border-radius: 30px;
-            box-shadow: 0px 2px 2px 0px #d4d4d4 inset;
-            border-bottom: solid 1px #ffffff;
+            box-shadow: 0px 2px 5px 0px #00000049 inset;
 
             &.active {
                 
@@ -229,7 +247,7 @@
                     left: 50%;
                     top: 50%;
                     transform: translate(-50%,-50%);
-                    background: #fdc147;
+                    background: linear-gradient(to bottom,#d31c1c 0%,#bb092f 98%);
                     border-radius: 30px;
                 }
             }
@@ -269,7 +287,7 @@
             width: 97%;
             font-size: 14px;
             line-height: 24px;
-            color: #454545;
+            color: #1b1b1b;
             padding: 0px 15px 15px 15px;
         }
 
@@ -277,14 +295,13 @@
             width: 92%;
             height: auto;
             border-radius: 12px;
-            border: 1px solid #e3e3e3;
             margin: 0px auto 20px;
             padding: 15px;
 
             p {
                 padding: 5px 15px;
                 font-size: 16px;
-                color: #356bf7;
+                color: #ce1427;
             }
         }
 
@@ -302,7 +319,7 @@
                 width: 15px;
                 height: 15px;
                 position: absolute;
-                background: url('../images/infor3.png') no-repeat;
+                background: url('../images/infor4.png') no-repeat;
                 top: -1px;
                 left: -18px;
             }
@@ -795,11 +812,13 @@
             display: none;
             float: right;
             padding: 4px 6px;
-            color: #454545;
-            background: #ffffff;
-            border: none;
+            background: linear-gradient(to top,#ffffff 5%,#ebf0f2 26%,#ffffff 82%);
+            color: #1b1b1b;
             border-radius: 3px;
-            box-shadow: 1px 2px 4px 0px #00000049;
+            box-shadow: 0px 2px 3px 0px #00000049;
+            border-style: solid;
+            border-width: 1px;
+            border-color: #e4e4e4 #d0d0d0 #b4b4b4;
             font-size: 15px;
             margin: 8px 10px 0px 0px;
 
@@ -808,7 +827,8 @@
             }
 
             &:hover,&:active,&.active {
-                background: #356bf7;
+                background: linear-gradient(to top, #d31c1c 0%, #bb092f 98%);
+                border: none;
                 color: #ffffff;
                 box-shadow: none;
             }
@@ -818,7 +838,7 @@
             display: none;
             float: right;
             position: relative;
-            background: #d0d0d0;
+            background: #dadada;
             margin: 7px 20px 0px 0px;
             padding: 8px 12px;
             border-radius: 20px;
@@ -833,7 +853,7 @@
 
                 span {
                     &:last-child {
-                        color: #595959;
+                        color: #1b1b1b;
                     }
                 }
 
@@ -845,7 +865,7 @@
             &.rside {
                 span {
                     &:nth-of-type(1) {
-                        color: #595959;
+                        color: #1b1b1b;
                     }
                 }
                 
@@ -859,7 +879,7 @@
                 margin-right: 20px;
                 font-size: 14px;
                 position: relative;
-                color: #356bf7;
+                color: #ce1427;
 
                 &:last-child {
                     margin: 0px;
@@ -875,7 +895,7 @@
                 top: 10%;
                 border-radius: 20px;
                 box-sizing: border-box;
-                border: solid 1px #356bf7;
+                border: solid 1px #d31c1c;
             }
         }
 
