--- a/scss_4/_rightside.scss
+++ b/scss_4/_rightside.scss
@@ -22,7 +22,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-        background: linear-gradient(to bottom,#ffab00 0%, #ff4802 100%);
+        background: linear-gradient(to top,#32496d 0%, #507abe 100%);
         border-radius: 10px;
     }
     
@@ -259,7 +259,7 @@
             }
         
             &::-webkit-scrollbar-thumb {
-                background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+                background: linear-gradient(to top,#32496d 0%, #507abe 100%);
                 border-radius: 10px;
             }
 
@@ -454,7 +454,7 @@
             }
         
             &::-webkit-scrollbar-thumb {
-                background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+                background: linear-gradient(to top,#32496d 0%, #507abe 100%);
                 border-radius: 10px;
             }
 
