--- a/scss_4/style.scss
+++ b/scss_4/style.scss
@@ -32,7 +32,7 @@ html {
         }
     
         &::-webkit-scrollbar-thumb {
-            background: linear-gradient(to right,#ffab00 0%, #ff4802 100%);
+            background: linear-gradient(to top,#32496d 0%, #507abe 100%);
             border-radius: 10px;
         }
     }
