--- a/css_2/style.css
+++ b/css_2/style.css
@@ -1080,6 +1080,13 @@ main .bg {
   margin: 0px 0px 10px 10px;
   background: #ffffff;
 }
+.playBoard.index_page tr:nth-of-type(2):hover, .playBoard.result_page tr:nth-of-type(2):hover {
+  border-color: transparent transparent #356bf7 transparent;
+  box-shadow: none;
+}
+.playBoard.index_page tr th:nth-of-type(1).tLeft, .playBoard.result_page tr th:nth-of-type(1).tLeft {
+  border-bottom: solid 1px #dedede;
+}
 .playBoard tr {
   text-align: center;
   border-style: solid;
@@ -1089,6 +1096,10 @@ main .bg {
 .playBoard tr:nth-of-type(1) {
   border-top-color: #f2f2f2;
   border-bottom-color: #f0f0f0;
+}
+.playBoard tr:nth-of-type(1):hover {
+  border-color: transparent;
+  box-shadow: none;
 }
 .playBoard tr:nth-of-type(odd) {
   background: #f5f5f5;
