--- a/css_4/style.css
+++ b/css_4/style.css
@@ -1080,6 +1080,14 @@ main .bg {
   background: #ffffff;
   box-shadow: 0px 0px 5px 0px #00000049;
 }
+.playBoard.index_page tr:nth-of-type(2):hover, .playBoard.result_page tr:nth-of-type(2):hover {
+  border-color: transparent transparent #f0f0f0 transparent;
+  box-shadow: none;
+}
+.playBoard.index_page tr th.tLeft:nth-of-type(1), .playBoard.result_page tr th.tLeft:nth-of-type(1) {
+  background: #ffffff;
+  color: #ce1427;
+}
 .playBoard tr {
   text-align: center;
   border-style: solid;
@@ -1089,6 +1097,10 @@ main .bg {
 .playBoard tr:nth-of-type(1) {
   border-top-color: #f2f2f2;
   border-bottom-color: #f0f0f0;
+}
+.playBoard tr:nth-of-type(1):hover {
+  border-color: transparent;
+  box-shadow: none;
 }
 .playBoard tr:nth-of-type(odd) {
   background: #f5f5f5;
