--- a/scss_4/_table.scss
+++ b/scss_4/_table.scss
@@ -8,6 +8,31 @@
 	background: #ffffff;
 	box-shadow: 0px 0px 5px 0px #00000049;
 
+	&.index_page,&.result_page {
+
+		tr {
+
+			&:nth-of-type(2) {
+
+				&:hover {
+					border-color: transparent transparent #f0f0f0 transparent;
+					box-shadow: none;
+				}
+			}
+
+			th {
+				
+				&.tLeft {
+					
+					&:nth-of-type(1) {
+						background: #ffffff;
+						color: #ce1427;
+					}
+				}
+			}
+		}
+	}
+
 	//內容
     tr {
 		text-align: center;
@@ -18,6 +43,11 @@
 		&:nth-of-type(1) {
 			border-top-color: #f2f2f2;
 			border-bottom-color: #f0f0f0;
+
+			&:hover {
+				border-color: transparent;
+				box-shadow: none;
+			}
 		}
 
 		&:nth-of-type(odd) {
